--- a/index.org
+++ b/index.org
@@ -684,7 +684,7 @@ Javaでは比較的自由に改行や空白を入れることができる。
 - Javaでは「{」と「}」でブロックを作る
   - [[https://docs.oracle.com/javase/specs/jls/se18/html/jls-14.html#jls-14.2][14.2. Blocks]]
 
-#+begin_src java -n :results output
+#+begin_src java :results output
   //  1   2   3
   {
       System.out.println("block1");
@@ -883,9 +883,9 @@ block4-2
 | short（ショート）               |                  16 | -32768～32767                             |
 | int（インテジャー or イント）   |                  32 | -2147483648～2147483647                   |
 | long（ロング）                  |                  64 | -9223372036854775808～9223372036854775807 |
-| char（キャラクター or　チャー） |                  16 | Unicode文字 （\u0000～\uFFFF）            |
 | float（フロート）               |                  32 | 単精度浮動小数点数                        |
 | double（ダブル）                |                  64 | 倍精度浮動小数点数                        |
+| char（キャラクター or　チャー） |                  16 | Unicode文字 （\u0000～\uFFFF）            |
 | void（ボイド）                  |                 --- | （型が）無い ※特殊                       |
 
 #+begin_note
@@ -919,7 +919,7 @@ Javaでは基本型の他に「参照型（ReferenceType）」がある。イメ
   - 1L
   - 12345678901234567890123456789L
 
-#+begin_src java -n :results output
+#+begin_src java :results output
   System.out.println(1);
   System.out.println(-123);
   System.out.println(3776);
@@ -939,7 +939,7 @@ Javaでは基本型の他に「参照型（ReferenceType）」がある。イメ
 : -8022
 : 1234567890123456789
 
-*** 実数型
+*** 実数型 <- ここから
 
 - float型実数（アルファベットのFをつける）
   - -1.0F
