--- a/index.org
+++ b/index.org
@@ -1889,14 +1889,14 @@ System.out.println(3);
 
 # 左辺と右辺の値を比較し、その結果をtrue／falseで返します。一般的には、制御構文と合わせて利用します。
 
-| 演算子 | 概要                           | *例*      |
-|--------+--------------------------------+---------|
-| ==     | 左辺と右辺が等しければtrue     | 5 == 5  |
-| !=     | 左辺と右辺が等しくなければtrue | 5 != 5  |
-| <      | 左辺が右辺より小さければtrue   | 5 < 7   |
-| <=     | 左辺が右辺以下であればtrue     | 5 <= 3  |
-| >      | 左辺が右辺より大きければtrue   | 7 > 5   |
-| >=     | 左辺が右辺以上であればtrue     | 5 >= 7  |
+| 演算子 | 概要                           | *例*     |
+|--------+--------------------------------+--------|
+| ==     | 左辺と右辺が等しければtrue     | 5 == 5 |
+| !=     | 左辺と右辺が等しくなければtrue | 5 != 5 |
+| <      | 左辺が右辺より小さければtrue   | 5 < 7  |
+| <=     | 左辺が右辺以下であればtrue     | 5 <= 3 |
+| >      | 左辺が右辺より大きければtrue   | 7 > 5  |
+| >=     | 左辺が右辺以上であればtrue     | 5 >= 7 |
 
 - 等しい（==）
 
@@ -2689,16 +2689,37 @@ System.out.println(! 10 > 5);
 #+RESULTS:
 : あ
 
+- 文字列の長さを超えて取り出すことはできない
+
+#+begin_src java :results output
+    String str = "あいうえお";
+    char ch = str.charAt(5);
+    System.out.println(ch);
+#+end_src
+
+#+RESULTS:
+
 - 文字列から部分文字列を取り出す操作（substring）
 
 #+begin_src java :results output
   String str = "あいうえお";
-  String sub = str.substring(1,4); // String型
+  String sub = str.substring(1);
   System.out.println(sub);
 #+end_src
 
 #+RESULTS:
-: いうえ
+: いうえお
+
+- 任意の範囲
+
+#+begin_src java :results output
+    String str = "０１２３４５６７８９";
+    String sub = str.substring(3, 6);
+    System.out.println(sub);
+#+end_src
+
+#+RESULTS:
+: ３４５
 
 ** 文字列オブジェクトの様々な操作
 
